Alterando telefone para contato

--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
             </div>
             <div class="footer-contact">
                 <h3>Contato</h3>
-                <p><i class="fas fa-phone"></i> (16) 99999-9999</p>
+                <p><i class="fas fa-phone"></i> (16) 99705-5049</p>
             </div>
             <div class="footer-social">
                 <h3>Redes Sociais</h3>
                 <a href="https://www.instagram.com/vision.level?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                <a href=" https://wa.me/+5516997055049"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
         <div class="copyright">
